--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,7 @@
     padding: 0%;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    letter-spacing: 5px;
 }
 h1{
     font-family: 'PT Sans', sans-serif;
